--- a/aboutus.html
+++ b/aboutus.html
@@ -13,7 +13,7 @@
      <link rel="stylesheet" href="node_modules/bootstrap-social/bootstrap-social.css">
      <link href="css/styles.css" rel="stylesheet">
 
-    <title>Ristorante Con Fusion: About Us</title>
+    <title>Ristorante Brasserie: About Us</title>
 
 </head>
 
@@ -24,7 +24,7 @@
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#Navbar">
                 <span class="navbar-toggler-icon"></span>
             </button>
-           <a class="navbar-brand" href="./index.html">Ristorante Con Fusion</a>
+           <a class="navbar-brand" href="./index.html">Ristorante Brasserie</a>
         <div class="collapse navbar-collapse" id="Navbar">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item"><a class="nav-link" href="./index.html"><span class="fa fa-home fa-lg"></span> Home</a></li>
@@ -40,7 +40,7 @@
         <div class="container">
             <div class="row row-header">
                 <div class="col-12 col-sm-7">
-                    <h1>Ristorante con Fusion</h1>
+                    <h1>Ristorante Brasserie</h1>
                     <p>We take inspiration from the World's best cuisines, and create a unique fusion experience. Our lipsmacking creations will tickle your culinary senses!</p>
                 </div>
                 <div class="col-12 col-sm">
@@ -64,7 +64,7 @@
         <div class = "row row-content">
             <div class = "col-sm-6">
                 <h2>Our History</h2>
-                <p>Started in 2010, Ristorante con Fusion quickly established itself as a culinary icon par excellence in Hong Kong. With its unique brand of world fusion cuisine that can be found nowhere else, it enjoys patronage from the A-list clientele in Hong Kong.  Featuring four of the best three-star Michelin chefs in the world, you never know what will arrive on your plate the next time you visit us.</p>
+                <p>Started in 2010, Ristorante Brasserie quickly established itself as a culinary icon par excellence in Hong Kong. With its unique brand of world fusion cuisine that can be found nowhere else, it enjoys patronage from the A-list clientele in Hong Kong.  Featuring four of the best three-star Michelin chefs in the world, you never know what will arrive on your plate the next time you visit us.</p>
                 <p>The restaurant traces its humble beginnings to <em>The Frying Pan</em>, a successful chain started by our CEO, Mr. Peter Pan, that featured for the first time the world's best cuisines in a pan.</p>
             </div>
             <div class = "col col-sm order-sm-last col-md">
@@ -117,7 +117,7 @@
 		              <i class="fa fa-phone fa-lg"></i>: +852 1234 5678<br>
                       <i class="fa fa-fax fa-lg"></i>: +852 8765 4321<br>
                       <i class="fa fa-envelope fa-lg"></i>: 
-                      <a href="mailto:confusion@food.net">confusion@food.net</a>
+                      <a href="mailto:Brasserie@food.net">Brasserie@food.net</a>
 		           </address>
                 </div>
                 <div class="col-12 col-sm-4 align-self-center">
@@ -134,7 +134,7 @@
            </div>
            <div class="row justify-content-center">             
                 <div class="col-auto">
-                    <p>© Copyright 2018 Ristorante Con Fusion</p>
+                    <p>© Copyright 2018 Ristorante Brasserie</p>
                 </div>
            </div>
         </div>
