--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="node_modules/font-awesome/css/font-awesome.min.css">
     <link rel="stylesheet" href="node_modules/bootstrap-social/bootstrap-social.css">
     <link href="css/styles.css" rel="stylesheet">
-    <title>Ristorante Con Fusion</title>
+    <title>Ristorante Brasserie</title>
 </head>
 
 <body>
@@ -22,7 +22,7 @@
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#Navbar">
                 <span class="navbar-toggler-icon"></span>
             </button>
-           <a class="navbar-brand" href="./index.html">Ristorante Con Fusion</a>
+           <a class="navbar-brand" href="./index.html">Ristorante Brasserie</a>
         <div class="collapse navbar-collapse" id="Navbar">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item active"><a class="nav-link" href="./index.html"><span class="fa fa-home fa-lg"></span> Home</a></li>
@@ -38,7 +38,7 @@
         <div class = "container">
             <div class = "row row-header">
                 <div class = "col-12 col-sm-6">
-                    <h1>Ristorante con Fusion</h1>
+                    <h1>Ristorante Brasserie</h1>
                     <p>We take inspiration from the World's best cuisines, and create a unique fusion experience. Our lipsmacking creations will tickle your culinary senses!</p>
                 </div>
                 <div class = "col-12 col-sm">
@@ -102,7 +102,7 @@
 		              <i class="fa fa-phone fa-lg"></i>: +852 1234 5678<br>
                       <i class="fa fa-fax fa-lg"></i>: +852 8765 4321<br>
                       <i class="fa fa-envelope fa-lg"></i>: 
-                      <a href="mailto:confusion@food.net">confusion@food.net</a>
+                      <a href="mailto:Brasserie@food.net">Brasserie@food.net</a>
 		           </address>
                 </div>
                 <div class = "col-12 col-sm-4 align-self-center">
@@ -118,7 +118,7 @@
            </div>
            <div class = "row justify-content-center">             
                 <div class = "col-auto">
-                    <p>© Copyright 2018 Ristorante Con Fusion</p>
+                    <p>© Copyright 2018 Ristorante Brasserie</p>
                 </div>
            </div>
         </div>
