--- a/contactus.html
+++ b/contactus.html
@@ -66,11 +66,11 @@
             <div class="col-12 col-sm-4 offset-sm-1">
                    <h5>Our Address</h5>
                     <address style="font-size: 100%">
-		              121, Clear Water Bay Road<br>
-		              Clear Water Bay, Kowloon<br>
-		              HONG KONG<br>
-		              <i class="fa fa-phone"></i>: +852 1234 5678<br>
-		              <i class="fa fa-fax"></i>: +852 8765 4321<br>
+                        1055, 49th Street<br>
+                        Norfolk, Virginia<br>
+                        United States of America<br>
+		              <i class="fa fa-phone"></i>: +1 753 643 2976<br>
+		              <i class="fa fa-fax"></i>: +1 753 643 2976<br>
 		              <i class="fa fa-envelope"></i>:
                         <a href="mailto:Brasserie@food.net">Brasserie@food.net</a>
 		           </address>
@@ -80,7 +80,7 @@
             </div>
             <div class="col-12 col-sm-11 offset-sm-1">
                 <div class="btn-group" role="group">
-                    <a role="button" class="btn btn-primary" href="tel:+85212345678"><i class="fa fa-phone"></i> Call</a>
+                    <a role="button" class="btn btn-primary" href="tel:+17536432976"><i class="fa fa-phone"></i> Call</a>
                     <a role="button" class="btn btn-info"><i class="fa fa-skype"></i> Skype</a>
                     <a role="button" class="btn btn-success" href="mailto:Brasserie@food.net"><i class="fa fa-envelope-o"></i> Email</a>
                 </div>
@@ -171,11 +171,11 @@
                 <div class="col-7 col-sm-5">
                     <h5>Our Address</h5>
                     <address>
-		              121, Clear Water Bay Road<br>
-		              Clear Water Bay, Kowloon<br>
-		              HONG KONG<br>
-                      <i class="fa fa-phone fa-lg"></i>: +852 1234 5678<br>
-                      <i class="fa fa-fax fa-lg"></i>: +852 8765 4321<br>
+		              1055, 49th Street<br>
+		              Norfolk, Virginia<br>
+		              United States of America<br>
+                      <i class="fa fa-phone fa-lg"></i>: +1 753 643 2976<br>
+                      <i class="fa fa-fax fa-lg"></i>: +1 753 643 2976<br>
                       <i class="fa fa-envelope fa-lg"></i>: 
                       <a href="mailto:Brasserie@food.net">Brasserie@food.net</a>
 		           </address>
@@ -193,7 +193,7 @@
            </div>
            <div class="row justify-content-center">             
                 <div class="col-auto">
-                    <p>© Copyright 2018 Ristorante Brasserie</p>
+                    <p>© Copyright 2020 Ristorante Brasserie</p>
                 </div>
            </div>
         </div>
