--- a/index.html
+++ b/index.html
@@ -96,11 +96,11 @@
                 <div class = "col-7 col-sm-5">
                     <h5>Our Address</h5>
                     <address>
-		              121, Clear Water Bay Road<br>
-		              Clear Water Bay, Kowloon<br>
-		              HONG KONG<br>
-		              <i class="fa fa-phone fa-lg"></i>: +852 1234 5678<br>
-                      <i class="fa fa-fax fa-lg"></i>: +852 8765 4321<br>
+                        1055, 49th Street<br>
+                        Norfolk, Virginia<br>
+                        United States of America<br>
+		              <i class="fa fa-phone fa-lg"></i>: +1 753 643 2976<br>
+                      <i class="fa fa-fax fa-lg"></i>: +1 753 643 2976<br>
                       <i class="fa fa-envelope fa-lg"></i>: 
                       <a href="mailto:Brasserie@food.net">Brasserie@food.net</a>
 		           </address>
@@ -118,7 +118,7 @@
            </div>
            <div class = "row justify-content-center">             
                 <div class = "col-auto">
-                    <p>© Copyright 2018 Ristorante Brasserie</p>
+                    <p>© Copyright 2020 Ristorante Brasserie</p>
                 </div>
            </div>
         </div>
