--- a/contactus.html
+++ b/contactus.html
@@ -3,7 +3,7 @@
 
 <head>
 
-    <title>Ristorante Brasserie: About Us</title>
+    <title>Ristorante indoDelight: About Us</title>
     <!-- Required meta tags always come first -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -22,7 +22,7 @@
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#Navbar">
                 <span class="navbar-toggler-icon"></span>
             </button>
-            <a class="navbar-brand" href="./index.html">Ristorante Brasserie</a>
+            <a class="navbar-brand mr-auto" href="#"><img src="img/logo.png" height="45" width="90"></a>
             <div class="collapse navbar-collapse" id="Navbar">
                 <ul class="navbar-nav mr-auto">
                         <li class="nav-item"><a class="nav-link" href="./index.html"><span class="fa fa-home fa-lg"></span> Home</a></li>
@@ -38,10 +38,11 @@
         <div class="container">
             <div class="row row-header">
                 <div class="col-12 col-sm-6">
-                    <h1>Ristorante Brasserie</h1>
+                    <h1>Ristorante indoDelight</h1>
                     <p>We take inspiration from the World's best cuisines, and create a unique fusion experience. Our lipsmacking creations will tickle your culinary senses!</p>
                 </div>
-                <div class="col-12 col-sm">
+                <div class = "col-12 col-sm align-self-center">
+                    <img src="img/logo.png" class="img-fluid">
                 </div>
             </div>
         </div>
@@ -72,7 +73,7 @@
 		              <i class="fa fa-phone"></i>: +1 753 643 2976<br>
 		              <i class="fa fa-fax"></i>: +1 753 643 2976<br>
 		              <i class="fa fa-envelope"></i>:
-                        <a href="mailto:Brasserie@food.net">Brasserie@food.net</a>
+                        <a href="mailto:indoDelight@food.net">indoDelight@food.net</a>
 		           </address>
             </div>
             <div class="col-12 col-sm-6 offset-sm-1">
@@ -82,7 +83,7 @@
                 <div class="btn-group" role="group">
                     <a role="button" class="btn btn-primary" href="tel:+17536432976"><i class="fa fa-phone"></i> Call</a>
                     <a role="button" class="btn btn-info"><i class="fa fa-skype"></i> Skype</a>
-                    <a role="button" class="btn btn-success" href="mailto:Brasserie@food.net"><i class="fa fa-envelope-o"></i> Email</a>
+                    <a role="button" class="btn btn-success" href="mailto:indoDelight@food.net"><i class="fa fa-envelope-o"></i> Email</a>
                 </div>
             </div>
         </div>
@@ -177,7 +178,7 @@
                       <i class="fa fa-phone fa-lg"></i>: +1 753 643 2976<br>
                       <i class="fa fa-fax fa-lg"></i>: +1 753 643 2976<br>
                       <i class="fa fa-envelope fa-lg"></i>: 
-                      <a href="mailto:Brasserie@food.net">Brasserie@food.net</a>
+                      <a href="mailto:indoDelight@food.net">indoDelight@food.net</a>
 		           </address>
                 </div>
                 <div class="col-12 col-sm-4 align-self-center">
@@ -193,7 +194,7 @@
            </div>
            <div class="row justify-content-center">             
                 <div class="col-auto">
-                    <p>© Copyright 2020 Ristorante Brasserie</p>
+                    <p>© Copyright 2020 Ristorante indoDelight</p>
                 </div>
            </div>
         </div>
