--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="node_modules/font-awesome/css/font-awesome.min.css">
     <link rel="stylesheet" href="node_modules/bootstrap-social/bootstrap-social.css">
     <link href="css/styles.css" rel="stylesheet">
-    <title>Ristorante Brasserie</title>
+    <title>Ristorante indoDelight</title>
 </head>
 
 <body>
@@ -22,7 +22,7 @@
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#Navbar">
                 <span class="navbar-toggler-icon"></span>
             </button>
-           <a class="navbar-brand" href="./index.html">Ristorante Brasserie</a>
+            <a class="navbar-brand mr-auto" href="#"><img src="img/logo.png" height="45" width="90"></a>
         <div class="collapse navbar-collapse" id="Navbar">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item active"><a class="nav-link" href="./index.html"><span class="fa fa-home fa-lg"></span> Home</a></li>
@@ -38,10 +38,11 @@
         <div class = "container">
             <div class = "row row-header">
                 <div class = "col-12 col-sm-6">
-                    <h1>Ristorante Brasserie</h1>
+                    <h1>Ristorante indoDelight</h1>
                     <p>We take inspiration from the World's best cuisines, and create a unique fusion experience. Our lipsmacking creations will tickle your culinary senses!</p>
                 </div>
-                <div class = "col-12 col-sm">
+                <div class = "col-12 col-sm align-self-center">
+                    <img src="img/logo.png" class="img-fluid">
                 </div>
             </div>
         </div>
@@ -53,8 +54,17 @@
                 <h3>Our Lipsmacking Culinary Creations</h3>
             </div>
             <div class = "col col-sm order-sm-first col-md">
-                <h2>Uthappizza</h2>
-                <p>A unique combination of Indian Uthappam (pancake) and Italian pizza, topped with Cerignola olives, ripe vine cherry tomatoes, Vidalia onion, Guntur chillies and Buffalo Paneer.</p>
+                <div class="media">
+                    <img class="d-flex mr-3 img-thumbnail align-self-center"
+                            src="img/uthappizza.png" alt="Uthappizza">
+                    <div class="media-body">
+                        <h2 class="mt-0">Uthappizza</h2>
+                        <p class="d-none d-sm-block">A unique combination of Indian Uthappam (pancake) and
+                            Italian pizza, topped with Cerignola olives, ripe vine
+                            cherry tomatoes, Vidalia onion, Guntur chillies and
+                            Buffalo Paneer.</p>
+                    </div>
+                </div>
             </div>
         </div>
 
@@ -64,9 +74,18 @@
                 <h3>This Month's Promotions</h3>
             </div>
             <div class = "col col-sm col-md">
-                <h2>Weekend Grand Buffet</h2>
-                <p>Featuring mouthwatering combinations with a choice of five different salads, six enticing appetizers, six main entrees and five choicest desserts. Free flowing bubbly and soft drinks. All for just $19.99 per person </p>
-            </div>
+                <div class ="media">
+                    <img class="d-flex mr-3 img-thumbnail align-self-center"
+                            src="img/buffet.png" alt="buffet">
+                    <div class="media-body">
+                        <h2 class="mt-0">Weekend Grand Buffet</h2>
+                        <p class="d-none d-sm-block">Featuring mouthwatering combinations with a choice of five different salads, six enticing appetizers, 
+                            six main entrees and five choicest desserts. Free flowing bubbly and soft drinks.
+                            All for just $19.99 per person </p>
+            
+                     </div> 
+                </div>
+             </div>
         </div>
 
         <div class = "row row-content align-items-center">
@@ -74,9 +93,20 @@
                 <h3>Meet our Culinary Specialists</h3>
             </div>
             <div class = "col col-sm order-sm-first col-md">
-                <h2>Alberto Somayya</h2>
-                <h4>Executive Chef</h4>
-                <p>Award winning three-star Michelin chef with wide International experience having worked closely with whos-who in the culinary world, he specializes in creating mouthwatering Indo-Italian fusion experiences. </p>
+                <div class="media">
+                    <img class="d-flex mr-3 img-thumbnail align-self-center"
+                            src="img/alberto.png" alt="Alberto Somayya">
+                    <div class="media-body">
+                        <h2 class="mt-0">Alberto Somayya</h2>
+                        <h4>Executive Chef</h4>
+                        <p class="d-none d-sm-block">Award winning three-star Michelin chef with wide
+                            International experience having worked closely with
+                            whos-who in the culinary world, he specializes in
+                            creating mouthwatering Indo-Italian fusion experiences.
+                            </p>
+                    </div>
+                </div>
+                    
             </div>
         </div>
     </div>
@@ -102,7 +132,7 @@
 		              <i class="fa fa-phone fa-lg"></i>: +1 753 643 2976<br>
                       <i class="fa fa-fax fa-lg"></i>: +1 753 643 2976<br>
                       <i class="fa fa-envelope fa-lg"></i>: 
-                      <a href="mailto:Brasserie@food.net">Brasserie@food.net</a>
+                      <a href="mailto:indoDelight@food.net">indoDelight@food.net</a>
 		           </address>
                 </div>
                 <div class = "col-12 col-sm-4 align-self-center">
@@ -118,7 +148,7 @@
            </div>
            <div class = "row justify-content-center">             
                 <div class = "col-auto">
-                    <p>© Copyright 2020 Ristorante Brasserie</p>
+                    <p>© Copyright 2020 Ristorante indoDelight</p>
                 </div>
            </div>
         </div>
