--- a/index.html
+++ b/index.html
@@ -74,18 +74,15 @@
                 <h3>This Month's Promotions</h3>
             </div>
             <div class = "col col-sm col-md">
-                <div class ="media">
-                    <img class="d-flex mr-3 img-thumbnail align-self-center"
-                            src="img/buffet.png" alt="buffet">
-                    <div class="media-body">
-                        <h2 class="mt-0">Weekend Grand Buffet <span class="badge badge-pill badge-secondary">$19.99</span></h2>
+                <h2 class="mt-0">Weekend Grand Buffet <span class="badge badge-danger">NEW</span> <span class="badge badge-pill badge-secondary">$19.99</span></h2>
                         <p class="d-none d-sm-block">Featuring mouthwatering combinations with a choice of five different salads, six enticing appetizers, 
                             six main entrees and five choicest desserts. Free flowing bubbly and soft drinks.
-                            All for just $19.99 per person </p>
-            
-                     </div> 
-                </div>
+                       All for just $19.99 per person </p>
              </div>
+             <div class ="media">
+                <img class="d-flex mr-3 img-thumbnail align-self-center"
+                        src="img/buffet.png" alt="buffet">
+            </div>
         </div>
 
         <div class = "row row-content align-items-center">
@@ -107,8 +104,69 @@
                     </div>
                 </div>
                     
+            </div> 
+        </div>
+        <div class = "row row-content align-self-center">
+            <div class = "col-12 col-sm-8">
+                <div class = "card">
+                    <h5 class="card-header">Reserve</h5>
+                    <div class = "card-body">
+                        <form>
+                            <div class="form-group row">
+                                <label for="reserve" class="col-sm-2 col-form-label">Number of Guests</label>
+                                <div class="col-sm-10">
+                                    <div class="form-check form-check-inline">
+                                        <input class="form-check-input" type="checkbox" id="inlineCheckbox1" value="option1">
+                                        <label class="form-check-label" for="inlineCheckbox1">1</label>
+                                    </div>
+                                    <div class="form-check form-check-inline">
+                                        <input class="form-check-input" type="checkbox" id="inlineCheckbox2" value="option2">
+                                        <label class="form-check-label" for="inlineCheckbox2">2</label>
+                                    </div>
+                                    <div class="form-check form-check-inline">
+                                        <input class="form-check-input" type="checkbox" id="inlineCheckbox3" value="option3">
+                                        <label class="form-check-label" for="inlineCheckbox3">3</label>
+                                    </div>
+                                    <div class="form-check form-check-inline">
+                                        <input class="form-check-input" type="checkbox" id="inlineCheckbox4" value="option4">
+                                        <label class="form-check-label" for="inlineCheckbox4">4</label>
+                                    </div>
+                                    <div class="form-check form-check-inline">
+                                        <input class="form-check-input" type="checkbox" id="inlineCheckbox5" value="option5">
+                                        <label class="form-check-label" for="inlineCheckbox5">5</label>
+                                    </div>
+                                    <div class="form-check form-check-inline">
+                                        <input class="form-check-input" type="checkbox" id="inlineCheckbox6" value="option6">
+                                        <label class="form-check-label" for="inlineCheckbox6">6</label>
+                                    </div>
+                                </div>
+                              </div>
+
+
+
+                                <div class="form-group row">
+                                    <label for="dateTime" class="col-12 col-md-2 col-form-label">Date and Time</label>
+                                    <div class="col-5 col-md-3">
+                                        <input type="date" class="form-control" id="date" name="date" placeholder="Date">
+                                    </div>
+                                    <div class="col-5 col-md-3">
+                                        <input type="time" class="form-control" id="time" name="time" placeholder="Time">
+                                    </div>
+                                </div>
+
+
+
+                        </form>
+
+                    </div>
+                </div>
             </div>
         </div>
+
+
+
+
+
     </div>
 
     <footer class = "footer">
