--- a/index.html
+++ b/index.html
@@ -37,12 +37,13 @@
     <header class = "jumbotron">
         <div class = "container">
             <div class = "row row-header">
-                <div class = "col-12 col-sm-6">
+                <div class = "col-12 col-sm-5">
                     <h1>Ristorante indoDelight</h1>
                     <p>We take inspiration from the World's best cuisines, and create a unique fusion experience. Our lipsmacking creations will tickle your culinary senses!</p>
                 </div>
                 <div class = "col-12 col-sm align-self-center">
                     <img src="img/logo.png" class="img-fluid">
+                    <a class="btn btn-warning" href="#reserve" role="button">Reserve a Table</a>
                 </div>
             </div>
         </div>
@@ -106,39 +107,39 @@
                     
             </div> 
         </div>
-        <div class = "row row-content align-self-center">
-            <div class = "col-12 col-sm-8">
-                <div class = "card">
-                    <h5 class="card-header">Reserve</h5>
+        <div class = "row row-content align-items-center">
+            <div class = "col-12 col-sm-8"style="margin-left: 150px; margin-right: 10px;">
+                <div class = "card ">
+                    <h5 id ="reserve" class="card-header bg-warning" >Reserve a Table</h5>
                     <div class = "card-body">
                         <form>
                             <div class="form-group row">
                                 <label for="reserve" class="col-sm-2 col-form-label">Number of Guests</label>
                                 <div class="col-sm-10">
                                     <div class="form-check form-check-inline">
-                                        <input class="form-check-input" type="checkbox" id="inlineCheckbox1" value="option1">
-                                        <label class="form-check-label" for="inlineCheckbox1">1</label>
-                                    </div>
-                                    <div class="form-check form-check-inline">
-                                        <input class="form-check-input" type="checkbox" id="inlineCheckbox2" value="option2">
-                                        <label class="form-check-label" for="inlineCheckbox2">2</label>
-                                    </div>
-                                    <div class="form-check form-check-inline">
-                                        <input class="form-check-input" type="checkbox" id="inlineCheckbox3" value="option3">
-                                        <label class="form-check-label" for="inlineCheckbox3">3</label>
-                                    </div>
-                                    <div class="form-check form-check-inline">
-                                        <input class="form-check-input" type="checkbox" id="inlineCheckbox4" value="option4">
-                                        <label class="form-check-label" for="inlineCheckbox4">4</label>
-                                    </div>
-                                    <div class="form-check form-check-inline">
-                                        <input class="form-check-input" type="checkbox" id="inlineCheckbox5" value="option5">
-                                        <label class="form-check-label" for="inlineCheckbox5">5</label>
-                                    </div>
-                                    <div class="form-check form-check-inline">
-                                        <input class="form-check-input" type="checkbox" id="inlineCheckbox6" value="option6">
-                                        <label class="form-check-label" for="inlineCheckbox6">6</label>
-                                    </div>
+                                        <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio1" value="option1">
+                                        <label class="form-check-label" for="inlineRadio1">1</label>
+                                      </div>
+                                      <div class="form-check form-check-inline">
+                                        <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio2" value="option2">
+                                        <label class="form-check-label" for="inlineRadio2">2</label>
+                                      </div>
+                                      <div class="form-check form-check-inline">
+                                        <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio3" value="option3">
+                                        <label class="form-check-label" for="inlineRadio3">3</label>
+                                      </div>
+                                      <div class="form-check form-check-inline">
+                                        <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio4" value="option4">
+                                        <label class="form-check-label" for="inlineRadio4">4</label>
+                                      </div>
+                                      <div class="form-check form-check-inline">
+                                        <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio5" value="option5">
+                                        <label class="form-check-label" for="inlineRadio5">5</label>
+                                      </div>
+                                      <div class="form-check form-check-inline">
+                                        <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio6" value="option6">
+                                        <label class="form-check-label" for="inlineRadio3">6</label>
+                                      </div>
                                 </div>
                               </div>
 
@@ -154,7 +155,11 @@
                                     </div>
                                 </div>
 
-
+                                <div class="form-group row">
+                                    <div class="offset-md-2 col-md-10">
+                                        <button type="submit" class="btn btn-primary">Reserve</button>
+                                    </div>
+                                </div>
 
                         </form>
 
