--- a/index.html
+++ b/index.html
@@ -221,6 +221,16 @@
                         <span class="carousel-control-next-icon" aria-hidden="true"></span>
                     </a>
 
+                    <div class="btn-group" id="carouselButton">
+                        <button class="btn btn-danger btn-sm" id="carousel-pause">
+                            <span class="fa fa-pause"></span>
+                        </button>
+                        <button class="btn btn-danger btn-sm" id="carousel-play">
+                            <span class="fa fa-play"></span>
+                        </button>
+                    </div>
+       
+
                 </div>
  
              </div>
@@ -400,6 +410,17 @@
             $('[data-toggle="tooltip"]').tooltip();
         });
     </script>
+        <script>
+            $(document).ready(function(){
+                $("#mycarousel").carousel( { interval: 2000 } );
+                $("#carousel-pause").click(function(){
+                    $("#mycarousel").carousel('pause');
+                });
+                $("#carousel-play").click(function(){
+                    $("#mycarousel").carousel('cycle');
+                });
+            });
+        </script>
 </body>
 
 </html>
